--- a/fase2/design.html
+++ b/fase2/design.html
@@ -34,7 +34,7 @@
             </ul>
               
 
-            <li>Acerca de</li>
+            <li>Acerca del autor</li>
             
 
         </ul>
