--- a/evaluacion1.html
+++ b/evaluacion1.html
@@ -11,43 +11,85 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Etiquetas Básicas de HTML</title>
     <link rel="stylesheet" href="css/style.css">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
+
 </head>
 
 <body>
 
     <header>
-        <img src="img/logo.png" style="width: 20%;" alt="">
-        <ul id="menu">
-            <li><a href="index.html">Inicio</a></li>
-            <li>Temas
-                <ul>
-                    <li><a href="concepto1.html">Etiquetas Básicas</a>
-                    </li>
-                    <li><a href="concepto2.html">Atributos y Valores</a></li>
-                </ul>
-            </li>
-            <li>Recursos
-                <ul>
-                    <li><a href="recurso1.html">Que son las Etiquetas HTML</a></li>
-                    <li><a href="recurso2.html">Atributos en HTML</a></li>
-                </ul>
-            </li>
-            <li>Aprendizaje
-                <ul>
-                    <li>
-                        <a href="evaluacion1.html">
-                            Evaluación 1
-                        </a>
-                    </li>
-                    <li>
-                        <a href="evaluacion2.html">Evaluación 2</a>
-                    </li>
 
-                </ul>
-            </li>
 
-            <li><a href="autor.html">Autor</a></li>
-        </ul>
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <img src="img/logo.png" style="width: 10%;" alt="">
+
+            <div class="container-fluid">
+                <a class="navbar-brand" href="index.html">Inicio</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Temas
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="concepto1.html">Etiquetas Básicas</a></li>
+                                <li><a class="dropdown-item" href="concepto2.html">Atributos y valores</a></li>
+
+                            </ul>
+                        </li>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Recursos
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="recurso1.html">Que son las etiquetas en HTML</a></li>
+                                <li><a class="dropdown-item" href="recurso2.html">Atributos en HTML</a></li>
+
+                            </ul>
+                        </li>
+
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false">
+                                Aprendizaje
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                <li><a class="dropdown-item" href="evaluacion1.html">Evaluación 1</a></li>
+                                <li><a class="dropdown-item" href="evaluacion2.html">Evaluación 2</a></li>
+
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="autor.html">Autor</a>
+                        </li>
+
+                    </ul>
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                </div>
+            </div>
+        </nav>
+<br>
+       
+
         <div class="bar">
             <h1>Evaluacio:Etiquetas Básicas de HTML</h1>
         </div>
